# dlib-pytorch-benchmark

./: .clang-format  CMakeLists.txt  README.md  build.sh
src/: main.cpp  main.py  resnet.h
